WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233052
REGRESSION (
r285698
): Build correction after refactoring id handling
https://bugs.webkit.org/show_bug.cgi?id=233052
Summary
REGRESSION (r285698): Build correction after refactoring id handling
Brent Fulgham
Reported
2021-11-12 10:49:52 PST
In
r285698
I added a new 'toNSData' inline for BufferSource, which is used in WebAuthenticatorCoordinatorProxy.mm. At the last minute, we decided to not export the function without its namespace but forgot to update WebAuthenticatorCoordinatorProxy.mm with that change. I missed this locally because I didn't do a clean build.
Attachments
Patch
(4.47 KB, patch)
2021-11-12 10:54 PST
,
Brent Fulgham
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2021-11-12 10:50:10 PST
<
rdar://problem/85347865
>
Brent Fulgham
Comment 2
2021-11-12 10:54:51 PST
Created
attachment 444083
[details]
Patch
EWS
Comment 3
2021-11-12 12:15:46 PST
Committed
r285736
(
244195@main
): <
https://commits.webkit.org/244195@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 444083
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug