REGRESSION (r285698): Build correction after refactoring id handling https://bugs.webkit.org/show_bug.cgi?id=233052 <rdar://problem/85347865>

Reviewed by Chris Dumez.

Build fix after r285698. The new 'toNSData' method needs its namespace included.

* UIProcess/WebAuthentication/Cocoa/WebAuthenticatorCoordinatorProxy.mm:
(WebKit::toASCDescriptor):
(WebKit::configureRegistrationRequestContext):
(WebKit::configurationAssertionRequestContext):
(WebKit::toNSData): Deleted.



Canonical link: https://commits.webkit.org/244195@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285736 268f45cc-cd09-0410-ab3c-d52691b4dbfc